--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,106 +1,92 @@
+@use "sass:math";
+
 $purple: #a050be;
 $yellow: #fade50;
 $light-grey: #eaeaeb;
 $dark-grey: #464646;
 $img-width: 45%;
 
-.header {
-  font-family: Arial, Helvetica, sans-serif;
 
-  &__logo {
-    text-align: center;
-  }
+%no-decoration {
+  text-decoration: none;
+}
 
-  &__img {
-    max-width: 350px;
-  }
+%u-decoration {
+  text-decoration: underline;
+}
 
-  .menu {
-    &__list {
-      display: flex;
-      justify-content: center;
-      border-top: 1px solid $light-grey;
-      border-bottom: 1px solid $light-grey;
-      margin-left: auto;
-      margin-right: auto;
-      width: 80%;
-      padding: 20px 0;
-    }
+@mixin reset-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
 
-    &__links {
-      position: relative;
-      &:not(:last-child)::after {
-        content: "";
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        right: -3px;
-        margin: auto;
-        height: 15px;
-        width: 1px;
-        background-color: $light-grey;
-      }
-    }
-    &__link {
-      padding: 0 25px;
-      color: $dark-grey;
+@mixin flx($property, $jty-cnt) {
+  display: flex;
+  #{$property}: $jty-cnt;
+}
 
-      &:hover {
-        color: $purple;
-      }
-    }
+@mixin for-phone-only {
+  @media (max-width: 767.98px) {
+    @content;
   }
 }
 
-.footer {
-  text-align: center;
-  padding: 20px 0;
-  font-family: Arial, Helvetica, sans-serif;
-  position: relative;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-
-  &__logo {
-    max-width: 100px;
-  }
-
-  &__txt {
-    margin: auto;
-    font-size: 14px;
+@mixin for-tablet-only {
+  @media (min-width: 768px) and (max-width: 1199.98px) {
+    @content;
   }
 }
 
-.main{
-  display:flex;
+@mixin for-desktop-only {
+  @media (min-width: 1200px) {
+    @content;
+  }
+}
+
+@function calculateRem($size) {
+  @return math.div($size, 16px) * 1rem;
+}
+
+@mixin fontSize($size) {
+  font-size: calculateRem($size);
+}
+
+@import 'header', 'footer', 'about', 'article';
+
+.main {
+  display: flex;
   justify-content: center;
   flex-wrap: wrap;
   font-family: Arial, Helvetica, sans-serif;
 
-  &__content{
+  &__content {
+    @include for-phone-only {
+      width: 100%;
+    }
     width: 70%;
     padding: 40px 8px;
   }
 
-  &__post{
+  &__post {
     text-align: center;
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
   }
 
-  &__title{
+  &__title {
     text-decoration: none;
-    font-size: 22px;
+    @include fontSize(22px);
     color: $dark-grey;
     letter-spacing: 1.5;
 
-    &:hover{
+    &:hover {
       color: $purple;
     }
   }
 
-  &__subtitle{
+  &__subtitle {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -108,52 +94,52 @@ $img-width: 45%;
     margin-bottom: 20px;
   }
 
-  &__date{
+  &__date {
     margin: 0 10px;
-    font-size: 12px;
+    @include fontSize(12px);
     font-style: italic;
   }
 
-  &__tag{
-    font-size: 14px;
+  &__tag {
+    @include fontSize(14px);
     padding: 5px 7px;
     color: $purple;
     border: 1px solid $purple;
     margin: 0 10px;
   }
 
-  &__details{
+  &__details {
     border: 1px solid $light-grey;
   }
 
-  &__img{
+  &__img {
     width: 100%;
   }
 
-  &__description{
+  &__description {
     padding: 40px 0 25px;
     max-width: 650px;
     margin-left: auto;
     margin-right: auto;
-    font-size: 14px;
+    @include fontSize(14px);
   }
 
-  &__btn{
+  &__btn {
     text-decoration: none;
-    font-size: 16px;
+    @include fontSize(14px);
     letter-spacing: 1.5;
     color: $purple;
     background-color: $yellow;
     padding: 10px 20px;
-    transition: .3s;
+    transition: 0.3s;
 
-    &:hover{
+    &:hover {
       color: $yellow;
       background-color: $purple;
     }
   }
 
-  &__info{
+  &__info {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -161,110 +147,85 @@ $img-width: 45%;
     margin-top: 30px;
   }
 
-  &__author{
+  &__author {
     width: 50%;
     border-right: 1px solid $light-grey;
   }
 
-  &__p{
-    font-size: 14px;
+  &__p {
+    @include fontSize(14px);
     color: $dark-grey;
     margin-top: 10px;
     margin-bottom: 10px;
   }
 
-  &__comments{
+  &__comments {
     width: 50%;
   }
 
-  &__a{
+  &__a {
     text-decoration: none;
-    font-size: 14px;
+    @include fontSize(14px);
     color: $dark-grey;
     margin-top: 10px;
     margin-bottom: 10px;
 
-    &:hover{
+    &:hover {
       color: $purple;
     }
   }
-}
 
-.about{
-  width: 80%;
-  margin: 0 auto 40px;
-  font-family: Arial, Helvetica, sans-serif;
-
-  &__title{
-    background-color: $light-grey;
-    text-align: center;
-    padding: 20px;
+  &__sidebar {
+    width: 25%;
+    padding: 40px 10px;
   }
 
-  &__h1{
-    font-size: 22px;
-    color: $dark-grey;
-    letter-spacing: 1px;
-    margin-top: 5px;
-    margin-bottom: 10px;
-    margin-left: 0;
-    margin-right: 0;
-  }
+  .sidebar {
+    &__top {
+      border: 1px solid $light-grey;
+      padding: 15px 20px;
+    }
 
-  .breadcrumb{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    &__link{
-      font-size: 12px;
-      text-decoration: none;
-      color:$dark-grey;
-
-      &:hover{
-        text-decoration: underline;
-        color: $purple;
+    &__title {
+      background-color: $yellow;
+      text-align: center;
+      padding: 10px 20px;
+      margin: 0;
+      letter-spacing: 1.5px;
+    }
+    &__posts {
+      @include reset-list;
+    }
+    &__list {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      align-items: center;
+      padding: 15px 0;
+      &:not(:last-child) {
+        border-bottom: 1px dashed $light-grey;
       }
     }
+    &__img {
+      width: 40%;
+    }
+    &__details {
+      width: 50%;
+      padding-left: 10px;
+    }
+    &__post-title {
+      @include fontSize(14px);
+      color: $purple;
+      @extend %no-decoration;
 
-    &__img{
-      width: 10px;
-      margin: 8px;
+      &:hover {
+        @extend %u-decoration;
+      }
+    }
+    &__post-date {
+      @include fontSize(12px);
+      margin: 5px 0 0 0;
     }
   }
-
-  &__img{
-    width: 100%;
-    margin-bottom: 20px;
-  }
-
-  &__intro{
-    font-weight: 100;
-    color:$dark-grey;
-    width: 70%;
-    margin: 30px auto;
-    text-align: center;
-    font-size: 16px;
-  }
-
-  &__split{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: center;
-  }
-
-  &__img-description{
-    width: $img-width;
-  }
-
-  &__txt{
-    width: calc(100% - #{$img-width});
-  }
-
-  &__p{
-    font-size: 14px;
-    padding: 10px 20px;
-    color: $dark-grey;
-  }
 }
+
