--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,6 @@
 }
 .about__img {
   width: 100%;
-  margin-bottom: 20px;
 }
 .about__intro {
   font-weight: 100;
@@ -198,10 +197,6 @@
   font-size: 1.375rem;
   color: #464646;
   letter-spacing: 1px;
-  margin-top: 5px;
-  margin-bottom: 10px;
-  margin-left: 0;
-  margin-right: 0;
 }
 .article .breadcrumb {
   display: flex;
@@ -220,7 +215,6 @@
   margin: 8px;
 }
 .article__img {
-  margin-bottom: 20px;
   width: 100%;
 }
 .article__details {
@@ -229,7 +223,6 @@
   align-items: center;
 }
 .article__date {
-  margin: 0 10px;
   font-size: 0.75rem;
   font-style: italic;
 }
@@ -238,13 +231,225 @@
   padding: 5px 7px;
   color: #a050be;
   border: 1px solid #a050be;
-  margin: 0 10px;
 }
 .article__content {
   font-weight: 100;
   font-size: 0.875rem;
   color: #464646;
   padding: 10px 20px;
+}
+
+.collection {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: Arial;
+}
+@media (max-width: 767.98px) {
+  .collection {
+    width: 90%;
+  }
+}
+.collection__post {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+@media (max-width: 767.98px) {
+  .collection__post {
+    width: 100%;
+  }
+}
+.collection__post.half {
+  width: 50%;
+}
+@media (max-width: 767.98px) {
+  .collection__post.half {
+    width: 100%;
+  }
+}
+.collection__figure {
+  width: 50%;
+}
+.collection__img {
+  width: 100%;
+}
+.collection__about {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  text-align: center;
+}
+.collection__title {
+  color: #464646;
+  text-decoration: unset;
+  letter-spacing: 1px;
+  width: 100%;
+  margin: 10px 0;
+  font-size: 1.375rem;
+}
+@media (max-width: 767.98px) {
+  .collection__title {
+    font-size: 1rem;
+  }
+}
+.collection__title.half {
+  font-size: 1.125rem;
+}
+@media (max-width: 767.98px) {
+  .collection__title.half {
+    font-size: 1rem;
+  }
+}
+.collection__title:hover {
+  color: #a050be;
+  text-decoration: underline;
+}
+.collection__date {
+  font-size: 0.75rem;
+  font-style: italic;
+  width: 20%;
+}
+@media (max-width: 767.98px) {
+  .collection__date {
+    font-size: 0.625rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 1199.98px) {
+  .collection__date {
+    width: 30%;
+  }
+}
+.collection__tag {
+  font-size: 0.875rem;
+  width: 50px;
+  padding: 5px 7px;
+  color: #a050be;
+  border: 1px solid #a050be;
+}
+@media (max-width: 767.98px) {
+  .collection__tag {
+    width: 30px;
+    font-size: 0.75rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 1199.98px) {
+  .collection__tag {
+    width: 35px;
+    font-size: 0.75rem;
+  }
+}
+.collection__breadcrumb {
+  background-color: #eaeaeb;
+  text-align: center;
+  padding: 30px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.collection .breadcrumb__link {
+  font-size: 1.125rem;
+  text-decoration: unset;
+  color: #464646;
+  letter-spacing: 1px;
+}
+.collection .breadcrumb__link:hover {
+  color: #a050be;
+  text-decoration: underline;
+}
+.collection .breadcrumb__img {
+  width: 14px;
+  margin: 10px;
+}
+
+.contact {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+}
+.contact__figure {
+  width: 50%;
+}
+.contact__img {
+  width: 100%;
+}
+.contact__info {
+  width: 40%;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.contact__p-1 {
+  font-size: 2.5rem;
+  padding-top: 5px;
+}
+.contact__p-2 {
+  font-size: 1.25rem;
+  padding-top: 10px;
+}
+.contact__p-3 {
+  font-size: 0.8333333333rem;
+  padding-top: 15px;
+}
+.contact__p-4 {
+  font-size: 0.625rem;
+  padding-top: 20px;
+}
+
+.main .sidebar__title, .main__tag, .main__date, .article__date, .article__tag, .collection__date, .collection__tag {
+  margin-top: 0;
+}
+
+.main__a, .main__p, .main__subtitle {
+  margin-top: 10px;
+}
+
+.contact {
+  margin-top: 20px;
+}
+
+.article__h1 {
+  margin-top: 5px;
+}
+
+.main .sidebar__title, .main__tag, .main__date, .article__date, .article__tag, .collection__date, .collection__tag {
+  margin-bottom: 0;
+}
+
+.main__a, .main__p, .article__h1 {
+  margin-bottom: 10px;
+}
+
+.main__subtitle, .about__img, .article__img {
+  margin-bottom: 20px;
+}
+
+.main .sidebar__title, .article__h1 {
+  margin-left: 0;
+}
+
+.main__tag, .main__date, .article__date, .article__tag, .collection__date, .collection__tag {
+  margin-left: 10px;
+}
+
+.main .sidebar__title, .article__h1 {
+  margin-right: 0;
+}
+
+.main__tag, .main__date, .article__date, .article__tag, .collection__date, .collection__tag {
+  margin-right: 10px;
 }
 
 .main {
@@ -281,11 +486,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 10px;
-  margin-bottom: 20px;
 }
 .main__date {
-  margin: 0 10px;
   font-size: 0.75rem;
   font-style: italic;
 }
@@ -294,7 +496,6 @@
   padding: 5px 7px;
   color: #a050be;
   border: 1px solid #a050be;
-  margin: 0 10px;
 }
 .main__details {
   border: 1px solid #eaeaeb;
@@ -336,8 +537,6 @@
 .main__p {
   font-size: 0.875rem;
   color: #464646;
-  margin-top: 10px;
-  margin-bottom: 10px;
 }
 .main__comments {
   width: 50%;
@@ -346,8 +545,6 @@
   text-decoration: none;
   font-size: 0.875rem;
   color: #464646;
-  margin-top: 10px;
-  margin-bottom: 10px;
 }
 .main__a:hover {
   color: #a050be;
@@ -364,7 +561,6 @@
   background-color: #fade50;
   text-align: center;
   padding: 10px 20px;
-  margin: 0;
   letter-spacing: 1.5px;
 }
 .main .sidebar__posts {
